syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.logship.rpc";
option java_outer_classname = "Logship";

package rpc;

service LogUnitService {
    rpc GetUnits (Empty) returns (stream UnitRS);
    rpc NLines (NLineRQ) returns (stream NLineRS);
    rpc NLogs (NLogRQ) returns (stream LogRS);
    rpc TLogs (TLogRQ) returns (stream LogRS);
}

message Empty {
}

message UnitRS {
    string unit = 1;
}

message NLineRQ {
    string unit_id = 1;
    int32 count = 2;
}

message NLineRS {
    string line = 1;
}

message NLogRQ {
    string unit_id = 1;
    int32 count = 2;
    string log_pattern = 3;
    string date_time_layout = 4;
}

message TLogRQ {
    string unit_id = 1;
    int64 offset = 2;
    string duration = 4;
    string log_pattern = 5;
    string date_time_layout = 6;
}

message LogRS {
    string log = 1;
}
